# POMC

./: CONTRIBUTING.md  Cargo.toml  build.rs
.github/workflows/: ci.yml  release.yml
launcher/: eslint.config.js  package.json  pnpm-lock.yaml
launcher/src/: App.tsx  Router.tsx  main.tsx  styles.css
launcher/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: auth.rs  commands.rs  downloader.rs  main.rs  settings.rs  storage.rs
launcher/src-tauri/src/installations/: fs.rs  mod.rs  registry.rs
launcher/src/components/: Console.tsx  Navbar.tsx  Titlebar.tsx
launcher/src/components/dialogs/: AlertDialog.tsx  InstallationDialog.tsx
launcher/src/lib/: helpers.ts  installations.ts  state.ts  types.ts
launcher/src/pages/: Friends.tsx  Home.tsx  Installations.tsx  Mods.tsx  News.tsx  Servers.tsx  Settings.tsx
src/: args.rs  downloader.rs  entity.rs  main.rs
src/net/: connection.rs  handler.rs  mod.rs
src/physics/: collision.rs
src/player/: interaction.rs  mod.rs
src/renderer/: camera.rs  context.rs  entity_model.rs  mod.rs  swapchain.rs  util.rs
src/renderer/chunk/: atlas.rs  buffer.rs  mesher.rs
src/renderer/pipelines/: block_overlay.rs  chunk.rs  entity_renderer.rs  hand.rs  item_entity.rs  menu_overlay.rs  mod.rs  skin_preview.rs  sky.rs
src/renderer/shaders/: block_overlay.frag  block_overlay.vert  entity.frag  entity.vert  item_entity.frag  item_entity.vert  panorama.frag
src/sound/: mod.rs  sound_instance.rs  sounds.rs
src/ui/: chat.rs  common.rs  death.rs  hud.rs  inventory.rs  menu.rs  mod.rs  pause.rs
src/ui/menu/: auth_screens.rs  helpers.rs  main_screen.rs  mod.rs  options.rs  servers.rs
src/window/: input.rs  mod.rs
src/world/: chunk.rs
src/world/block/: model.rs  registry.rs
