[package]
name = "pomc"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
ash = "0.38"
ash-window = "0.13"
gpu-allocator = { version = "0.28", features = ["vulkan"] }
raw-window-handle = "0.6"
winit = "0.30"
glam = "0.30"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
parking_lot = "0.12"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
azalea-protocol = { version = "0.15", features = ["connecting"] }
azalea-crypto = "0.15"
azalea-auth = "0.15"
azalea-entity = "0.15"
azalea-world = "0.15"
azalea-block = "0.15"
azalea-chat = "0.15"
azalea-core = "0.15"
azalea-registry = "0.15"
uuid = { version = "1", features = ["v4"] }
crossbeam-channel = "0.5"
png = "0.17"
image = "0.25"
azalea-inventory = "0.15"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
reqwest = { version = "0.13", features = ["json"] }
sha1_smol = "1"
zip = { version = "8.3.0", default-features = false, features = ["deflate"] }
fontdue = "0.9.3"
binary-greedy-meshing = "0.5"
open = "5"
base64 = "0.22"

[build-dependencies]
shaderc = "0.10"
