[package]
name = "pomme"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
ash = "0.38"
ash-window = "0.13"
gpu-allocator = { version = "0.28", features = ["vulkan"] }
raw-window-handle = "0.6"
winit = "0.30"
glam = "0.32"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
parking_lot = "0.12"
bytemuck = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "macros"] }
flate2 = "1"
azalea-protocol = { version = "0.16", features = ["connecting"] }
azalea-crypto = "0.16"
azalea-auth = "0.16"
azalea-entity = "0.16"
azalea-world = "0.16"
azalea-block = "0.16"
azalea-chat = "0.16"
azalea-core = "0.16"
azalea-registry = "0.16"
uuid = { version = "1", features = ["v4"] }
crossbeam-channel = "0.5"
png = "0.17"
image = "0.25"
azalea-inventory = "0.16"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
reqwest = { version = "0.13", features = ["json", "blocking"] }
sha1_smol = "1"
zip = { version = "8.5.0", default-features = false, features = ["deflate"] }
fontdue = "0.9.3"
open = "5"
base64 = "0.22"
simdnbt = "0.10"
discord-rich-presence = "1.1"
md5 = "0.8.0"
oddio = "0.7.4"
azalea-buf = "0.16.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
shaderc = "0.10"
