[package]
name = "pomc-launcher"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
directories = "6"
sha1_smol = "1"
open = "5"
url = "2"
base64 = "0.22"
zip = { version = "8.3", default-features = false, features = ["deflate"] }
log = "0.4"
rand = "0.10"
keyring = { version = "3", features = ["sync-secret-service", "windows-native"] }
sha2 = "0.10"
urlencoding = "2"
